# dRAG

./: .gitignore  README.md  evaluate.py  generate.py  index.py  main.py  prompts.py  pyproject.toml
utils/: serializing.py
